# resync-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  pages.yml  release.yml
bench/: Dockerfile  Dockerfile.advanced  Dockerfile.network  advanced_benchmark.sh  benchmark.sh  docker_benchmark.sh  docker_benchmark_1gbps.sh  docker_network_benchmark.sh  generate_dataset.sh
docs/: index.html
src/: applier.rs  cdc.rs  cli.rs  delta.rs  error.rs  fiemap.rs  filter.rs  hasher.rs  io_engine.rs  lib.rs  main.rs  manifest.rs  progress.rs  scanner.rs  sync_engine.rs  uring_engine.rs
src/net/: client.rs  mod.rs  protocol.rs  server.rs  tls.rs
tests/: e2e_test.sh  network_test.sh
